package fr.univlille.labyrinth.model;

public interface Observer {
    public void update();
}
