@startuml totof
skinparam monochrome true
skinparam shadowing true
skinparam classAttributeIconSize 0

interface Observable {
  +addObserver(observer: Observer)
  +removeObserver(observer: Observer)
  +notifyObservers()
}

interface Observer {
  +update(observable)
}

class Maze {
  -grid: boolean[][]
  -player: Player
  -observers: List<Observer>
  -width: int
  -height: int
  +Maze(width: int, height: int, player: Player)
  +movePlayerUp()
  +movePlayerDown()
  +movePlayerLeft()
  +movePlayerRight()
  +addObserver(observer: Observer)
  +removeObserver(observer: Observer)
  +notifyObservers()
}

class Player {
  -position: Position
  +Player()
  +Player(position: Position)
  +setPosition(position: newPos)
}

class Position {
  -x: int
  -y: int
  +Position(x: int, y: int)
  +equals(obj)
}

' Relations
Maze --> Player : contient
Maze *--> "0..*" Observer : observers
Maze ..> Observable
Player --> Position : position

@enduml
